samples/_failures_safe/1761539238_f43044_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e54a8a2.c: In function ‘main’:
./samples/SAFE/__tmp_1e54a8a2.c:161:11: error: expected ‘;’ at end of input
  161 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_1e54a8a2.c:161:5: error: expected declaration or statement at end of input
  161 |     printf
      |     ^~~~~~
